--- a/propagating-light-ray.css
+++ b/propagating-light-ray.css
@@ -1,8 +1,11 @@
-* {
+*{
     margin: 0;
     padding: 0;
+    font-family: 'Courier New', Courier, monospace;
 }
 
-body {
-    background: #000;
+#line {
+    position: absolute;
+    width: 10px;
+    
 }
